--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
   ],
   "license": "MIT",
   "author": "Derryk Boyd",
-  "scripts": {},
-  "devDependencies": {}
+  "scripts": {
+    "build": "parcel build *.html",
+    "dev": "parcel index.html --open",
+    "start": "npm run build && npm run dev"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
