--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "main": "index.html",
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dboydgit/portfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dboydgit/portfolio/issues"
+  },
+  "homepage": "https://github.com/dboydgit/portfolio#readme"
 }
