Update homepage manifest

--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
   "bugs": {
     "url": "https://github.com/dboydgit/portfolio/issues"
   },
-  "homepage": "http://dboydgit.github.io/portfolio"
+  "homepage": "http://dboydgit.github.io/portfolio/"
 }
