--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "license": "MIT",
   "author": "Derryk Boyd",
   "scripts": {
-    "build": "parcel build *.html -d docs --public-url /portfolio/",
+    "copy": "copyfiles robots.txt humans.txt favicon.ico docs",
+    "build": "parcel build *.html -d docs --public-url /portfolio/ && npm run copy",
     "dev": "parcel index.html -d docs --open --public-url /portfolio/",
     "start": "npm run build && npm run dev"
   },
   "devDependencies": {
+    "copyfiles": "^2.3.0",
     "parcel-bundler": "^1.12.4"
   },
   "main": "index.html",
